--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
         <div id="profile-block">
             <div class="profile-header">
                 <div class="profile-container">
-                    <img src="assets/pfp.gif" alt="Profile" class="profile-picture">
+                    <img src="assets/pp.jpg" alt="Profile" class="profile-picture">
                 </div>
                 <div class="profile-info">
                     <div class="name-and-badges">
@@ -1022,4 +1022,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
