--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FactureMobile| <3 | dm me ! </title>
+    <title>boulevarddespleurs| <3 | dm me ! </title>
     <style>
         * {
             margin: 0;
@@ -874,7 +874,7 @@
                 </div>
                 <div class="profile-info">
                     <div class="name-and-badges">
-                        <div id="profile-name">FactureMobile</div>
+                        <div id="profile-name">Boulevard Des Pleurs</div>
                         <div class="badge-box">
                             <div class="badge-box-inner">
                                 <div class="badge-group">
@@ -907,7 +907,7 @@
             <div class="profile-footer">
 
                 <div class="social-links">
-                    <a href="https://discord.com/users/1331352861619257345" target="_blank">
+                    <a href="https://discord.com/users/1362788860064436415" target="_blank">
                         <img src="assets/discord.jpg" alt="Discord" class="social-icon">
                     </a>
                     <a href="https://github.com/13h1" target="_blank">
@@ -1024,3 +1024,4 @@
 </body>
 
 </html>
+
